--- a/config/local_env.yml
+++ b/config/local_env.yml
@@ -1,1 +1,4 @@
-GOOGLE_CLIENT_ID: ''
+MAIL_ADDRESS: 'smtp.sendgrid.net'
+SENDMAIL_USERNAME: 'app64693310@heroku.com'
+SENDMAIL_PASSWORD: 'hgsgavxj4545'
+MAIL_DOMAIN: 'heroku.com'
